# ChordCut

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_ru.md  groove_corrupted.db  groove_valid.db  pyproject.toml  requirements.txt  run.py
.github/: FUNDING.yml
.github/workflows/: release.yml
locale/ru/LC_MESSAGES/: chordcut.po
src/chordcut/: __init__.py  __main__.py  app.py  i18n.py  settings.py  updater.py
src/chordcut/api/: __init__.py  client.py
src/chordcut/db/: __init__.py  database.py  migrations.py  models.py
src/chordcut/player/: __init__.py  mpv_player.py
src/chordcut/ui/: __init__.py  context_menu.py  library_list.py  login_dialog.py  main_window.py  tray_icon.py
src/chordcut/ui/dialogs/: __init__.py  download_dialog.py  login_dialog.py  lyrics_dialog.py  properties_dialog.py  servers_dialog.py  settings_dialog.py  timer_dialog.py
src/chordcut/utils/: __init__.py  paths.py  text.py
src/groove/: __init__.py  __main__.py  app.py  i18n.py  settings.py
src/groove/api/: client.py
src/groove/db/: __init__.py  database.py
src/groove/player/: __init__.py  mpv_player.py
src/groove/ui/: context_menu.py  library_list.py  login_dialog.py  main_window.py  tray_icon.py
src/groove/ui/dialogs/: __init__.py  download_dialog.py  lyrics_dialog.py  properties_dialog.py  servers_dialog.py  settings_dialog.py  timer_dialog.py
src/groove/utils/: __init__.py  paths.py
