[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chordcut"
dynamic = ["version"]
description = "Accessible Jellyfin music client for the blind"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Andrey Yakuboy"},
    {name = "ChordCut Contributors"}
]
keywords = ["jellyfin", "music", "accessibility", "blind", "screen-reader"]
classifiers = [
"Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "wxPython>=4.2.0",
    "python-mpv>=1.0.0",
    "jellyfin-apiclient-python>=1.9.0",
]

[project.scripts]
chordcut = "chordcut.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "chordcut.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "RUF"]
# UP032: project uses _("...").format() / ngettext("...").format() for i18n;
#   converting to f-strings would break gettext translation lookup.
ignore = ["UP032"]

[tool.ruff.lint.per-file-ignores]
# Intentional Cyrillic characters for Russian ё→е transliteration.
"src/chordcut/utils/text.py" = ["RUF001", "RUF002"]

[tool.ruff.lint.isort]
known-first-party = ["chordcut"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
